Final commit before intial ML server

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -37,7 +37,7 @@ html, body{
       width: 320px;
 
       svg{
-        float: left;
+        // float: left;
       }
     }
 
@@ -45,7 +45,7 @@ html, body{
       width: 300px;
 
      .label{
-        float: left;
+        // float: left;
       }
     }
 
