--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -22,10 +22,58 @@ html, body{
 }
 
 #overlay{
+  display: box;
+  box-align: center;
+  box-pack: center;
+  position: fixed;
+  background: rgba(0,0,0, 0.5);
   width: 100%;
   height: 100%;
-  background-color: black;
-  z-index: 100;
+  z-index: 4;
+  overflow: scroll;
+}
+
+.modal-wrapper{
+  border-radius: 4px;
+  padding:0 13px 5px;
+  border:1px solid #555;
+  background: #eaecee;
+  
+  &.loading-modal{
+    width: 400px;
+  }
+  .bottombar{
+    display:box;
+    margin:10px 0;
+  }
+}
+
+.loading-modal{
+  background: linear-gradient(#fff, #E8E8E8);
+  border-radius: 4px;
+  box-shadow: 0px 1px 1px #ccc;
+  padding: 10px;
+  margin-top: 17px;
+  
+  .top-line{
+    display:box;
+    font-size: 12px;
+  }
+  .status-bar{
+    border-radius: 15px;
+    background: linear-gradient(#ccc, #ddd);
+    box-shadow: -1px 1px 1px white;
+    margin-top: 10px;
+    height:10px;
+    overflow:hidden;
+
+
+    .inner-bar{
+      background: rgb(94,151,198);
+      height: 14px;
+      width: 30%;
+    }
+  }
 }
 
 .left{
