--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -20,8 +20,8 @@
       <div class="label">Upload</div>
     </div>
 
-    <div id="downloadBtn" class="btn" {{action download}} >
-      <div class="label">Download</div>
+    <div id="downloadBtn" class="btn">
+      <a class="label" {{bindAttr href="view.currentImage.originalUrl"}}>Download</div>
     </div>
 
     
