--- a/app/assets/javascripts/templates/application.hbs
+++ b/app/assets/javascripts/templates/application.hbs
@@ -19,7 +19,7 @@
     </div>
 
     <div id="downloadBtn" class="btn">
-      <a class="label" {{bindAttr href="view.currentImage.originalUrl"}}>Download</div>
+      <a class="label" {{bindAttr href="view.currentImage.originalUrl"}}>Download</a>
     </div>
 
     
